2012-04-30: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* SongInspectorController.m do not include musicbrainz
	  header for now. From Philippe Roussel
2012-04-29 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* README, point out how to build with old musepack API
	* Bundles/Musepack/CNSFileHandle.h
	* Bundles/Musepack/CNSFileHandle.m
	* Bundles/Musepack/Musepack.h
	* Bundles/Musepack/Musepack.m 
	  Build against new Musepack API by default, based on patches from
	  Debian from Yavor Doganov, forwarded by Philippe Roussel
	  Build against old API using ADDITIONAL_OBJCFLAGS=-DMUSEPACK_API_126
	  in the make environment while building Cynthiune
2012-04-29 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* GNUmakefile remove old GNUSTEP_INSTALLATION_DIR
2012-04-29 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	Take patches from Debian, from Yavor Doganov  <yavor@gnu.org>
	Forwarded from Philippe Roussel, to fixFTBFS and adopt
	to the slightly changed avifile API.
        * Bundles/WindowsMedia.CWMFile.h (WMStreamReadFrames): Typo fix.
        * Bundles/WindowsMedia/CWMFile.cpp: Include <infotypes.h>.
        (WMFileAudioStreamCount, WMStreamGetFrameSize): Cast the
        result to unsigned int.
        (WMStreamReadFrames) <_samplesRead, _bytesRead>: Declare of
        type size_t.  Amend the call to readStream->ReadFrames
        accordingly.
2012-04-26 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* Bundles/OSS/GNUmakefile.preamble
	  only link against libossaudio on OpenBSD
2012-03-25 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* GNUmakefile.preamble use pkg-config to find the goom libraries
2012-03-25 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* Add the Sndio Output Bundle, still work in progress
2012-03-25 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* Bundles/Esound/EsoundPreference.m include NSDictionary.h
	* CynthiuneController.m do not include nonexisting header