@@ -1,3 +1,9 @@
+2012-04-30 Riccardo Mottola <rm@gnu.org>
+
+	* Bundles/MP3/MP3.h
+	* Bundles/MP3/MP3.m
+	Do not use @def() and expose ivars public to enable compiling with non-fragile ABI.
+
 2012-04-30: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
 	* SongInspectorController.m do not include musicbrainz
 	  header for now. From Philippe Roussel
